fixed mapbox controls z-index

--- a/src/style/Menu.module.css
+++ b/src/style/Menu.module.css
@@ -6,7 +6,7 @@
     justify-content: flex-end;
     align-items: center;
     pointer-events: none;
-    z-index: 2;
+    z-index: 3; /*mapbox controls are at 2*/
 }
 
 .container.open {
